--- a/_config.yml
+++ b/_config.yml
@@ -9,26 +9,25 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Naringu
-tagline:             'A Hacker like jekyll theme'
-description:         'oonlab is crafted with <3 by ariestiyansyah.'
-url:                 http://naringu.oonlab.com
+title:               Teh blog
+tagline:             'tis a blog'
+description:         'tis a description of a blog'
+url:                 http://s0lst1c3.github.io
 baseurl:             /
 paginate:            7
 
 # About/contact
 author:
-  name:              Rizky Ariestiyansyah
-  url:               https://twitter.com/ariestiyansyah
-  email:             ariestiyansyah.rizky@gmail.com
+  name:              Author here
+  url:               https://twitter.com/s0lst1c3
+  email:             contact@solstice.me
 
 # Custom vars
 version:             2.0
 
 # Social Media
-github:				http://github.com/ariestiyansyah
-twitter:			http://twitter.com/ariestiyansyah
-disqus:             testnaringu
+github:				http://github.com/s0lst1c3
+twitter:			http://twitter.com/s0lst1c3
 
 # Theme Author (Please don't edit this line cause of MIT LICENSE rules)
 theme:
