--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Teh blog
+title:               s0lst1ce.github.io
 tagline:             'tis a blog'
 description:         'tis a description of a blog'
 url:                 http://s0lst1c3.github.io
