--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               s0lst1ce.github.io
+title:               solstice.me
 tagline:             ''
 description:         "My name is John Gabriel Ryan. I'm an aspiring offensive security R&D, and this is my blog."
 url:                 http://s0lst1ce.github.io
