--- a/_config.yml
+++ b/_config.yml
@@ -12,20 +12,20 @@ relative_permalinks: true
 title:               solstice.me
 tagline:             ''
 description:         "My name is Gabriel Ryan. I'm an aspiring offensive security R&D, and this is my blog."
-url:                 http://s0lst1ce.github.io
+url:                 http://solstice.me
 baseurl:             /
 paginate:            7
 
 # About/contact
 author:
-  name:              John Gabriel 's0lst1ce' Ryan
+  name:              Gabriel 's0lst1ce' Ryan
   url:               https://twitter.com/s0lst1c3
-  email:             john.ryan@ogsystems.com
+  email:             gabriel@solstice.me
 
 # Custom vars
 version:             2.0
 
 # Social Media
 github:				http://github.com/s0lst1ce
-twitter:			http://twitter.com/s0lst1ce
+twitter:			http://twitter.com/s0lst1c3
 
