--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,9 @@ author:
 version:             2.0
 
 # Social Media
-github:				http://github.com/s0lst1ce
+github:				http://github.com/s0lst1c3
 twitter:			http://twitter.com/s0lst1c3
+linkedin:           http://linkedin.com/ms08067
 
+gems:
+	- jemoji
