attempting to update color

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Dependencies
-markdown:            redcarpet
-#markdown:            kramdown
+#markdown:            redcarpet
+markdown:            kramdown
 highlighter:         pygments
 
 # Permalinks
